# futaba-bot

./: .cspell.json  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cross-musl  Dockerfile.pre-built  README.md  futaba.example.toml
.github/workflows/: rust.yml
migrations/: 20210317114635_init_tables.sql  20230120124307_remove_last_id.sql  20230222124732_events.sql  20230523012041_user_google.sql  20230611014846_google_events.sql  20240419125849_llm.sql  20240420000000_google_events_per_user.sql
src/: application_command.rs  discord.rs  eueoeo.rs  events.rs  jwt_util.rs  link_rewriter.rs  llm.rs  main.rs  user.rs  web.rs
src/discord/: application_command.rs
src/sql/: add_user.sql  get_latest_stats.sql  init_tables.sql  insert_history.sql  last_message_id.sql  update_last_id.sql
src/user/: google.rs
